--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
     <body>
-        My super Website.
+        <h1>My awesome Website.</h1>
     </body>
 </html>*
